infra/kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: todo-app
  labels:
    app: api-app
spec:
  selector:
    app: api-app
  ports:
  - port: 4000
    targetPort: 4000
    protocol: TCP
  type: ClusterIP
